# ccmeter

./: CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml
ccmeter/: __init__.py  activity.py  auth.py  calibrate.py  cli.py  daemon.py  db.py  display.py  export.py  history.py  poll.py  report.py  scan.py  status.py  trend.py  update.py
ccmeter/migrations/: 001_initial.py  002_scan_cache.py  003_budget_history.py  __init__.py
docs/: evidence.md  reddit-post.md
tests/: test_calibrate.py  test_cost.py  test_migrations.py  test_scan.py
