[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccmeter"
dynamic = ["version"]
description = "Measure your actual Claude Code usage limits instead of guessing"
authors = [{name = "Tyson Chan", email = "tyson.chan@proton.me"}]
keywords = ["claude", "anthropic", "usage", "limits", "transparency", "metering"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "fncli>=0.1.0",
]

[project.scripts]
ccmeter = "ccmeter.cli:main"

[project.urls]
Repository = "https://github.com/iteebz/ccmeter"
Issues = "https://github.com/iteebz/ccmeter/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

[tool.hatch.version]
path = "ccmeter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ccmeter"]
